feat(testing): defined IT tests for scoring out port
