# api-onboarding/src/main/java/io/obya/api/onboarding/appl/out/ScorerDelegate.java
@@ -8,6 +8,6 @@ import java.net.URI;
 
 public interface ScorerDelegate {
 
-    Try<Scorecard> score(URI source, Contract contract);
-    Try<Scorecard> score(String source, Contract contract);
+    Try<Scorecard> score(URI source, Contract.Type contract);
+    Try<Scorecard> score(String source, Contract.Type contract);
 }
